--- a/frontend/src/components/atoms/Link.module.css
+++ b/frontend/src/components/atoms/Link.module.css
@@ -4,10 +4,21 @@
     text-decoration: none;
     font-size: 1.2rem;
     font-weight: 500;
-    transition: opacity 0.3s ease;
+    transition: opacity 0.3s cubic-bezier(0.5, 0, 0.5, 1), transform 0.1s cubic-bezier(0.5, 0, 0.5, 1);
 }
 
 .link:hover {
-    opacity: 0.7;
+    opacity: 0.9;
+    transform: translateY(-2px);
 }
 
+.link {
+    color: #fff;
+    text-decoration: none;
+}
+
+.link:visited,
+.link:hover,
+.link:active {
+    color: #fff;
+}
