correccion de errores en el frontend

--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -5,6 +5,7 @@
     align-items: center;
     padding: 1.5rem 3rem;
     background-color: #000;
+    /*position: absolute;*/
     position: absolute;
     top: 0;
     left: 0;
