--- a/frontend/src/components/Footer/Footer.module.css
+++ b/frontend/src/components/Footer/Footer.module.css
@@ -1,8 +1,10 @@
 /* Footer Styles */
 .footer {
-    background-color: transparent;
+    background-color: black;
+    font-weight: bold;
     padding: 0 10rem 5rem 10rem;
     color: #fff;
+    /*position: relative;*/
     position: absolute;
     bottom: 0;
     left: 0;
@@ -27,3 +29,7 @@
     font-weight: 500;
 }
 
+.links {
+    text-decoration: none;
+    color: white;
+}
