--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -1,7 +1,12 @@
+* {
+  font-family: 'Poppins', system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
+
 #root {
   width: 100%;
   margin: 0;
   padding: 0;
+  font-family: 'Poppins', system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
 .logo {
