--- a/frontend/src/styles/Footer.module.css
+++ b/frontend/src/styles/Footer.module.css
@@ -1,8 +1,8 @@
 /* Footer Styles */
 .footer {
-    background-color: black;
+    background-color: transparent;
     font-weight: bold;
-    padding: 0 10rem 5rem 10rem;
+    padding: 0 6vw 5rem 6vw;
     color: #fff;
     position: absolute;
     bottom: 0;
@@ -29,19 +29,14 @@
 }
 
 .links {
+    font-size: 1.2rem;
+    font-weight: 500;
     text-decoration: none;
     color: white;
 }
 
-@media (max-width: 900px) {
-    .footer {
-        padding: 2rem;
-        text-align: center;
-        position: relative;
-    }
-
-    .nav {
-        flex-direction: column;
-        gap: 1rem;
+@media (max-width: 400px) {
+    .links, .socialLinks {
+        font-size: 0.9rem;
     }
 }
