--- a/frontend/src/styles/Header.module.css
+++ b/frontend/src/styles/Header.module.css
@@ -1,3 +1,6 @@
+/* Importar Montserrat desde Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
+
 /* Header Styles */
 .header {
     display: flex;
@@ -14,11 +17,13 @@
     box-sizing: border-box;
 }
 
-@media (max-width: 768px) {
-    .header {
-        flex-direction: column;
-        padding: 1rem 2rem;
-        position: relative;
-    }
+a {
+    text-decoration: none;
+    color: inherit;
+    font-weight: lighter;
 }
 
+.header button:hover,
+.header button:focus-visible {
+    outline: 4px auto -webkit-focus-ring-color;
+}
