--- a/frontend/src/styles/Link.module.css
+++ b/frontend/src/styles/Link.module.css
@@ -1,4 +1,3 @@
-/* Link Styles */
 .link {
     color: #fff;
     text-decoration: none;
@@ -12,13 +11,7 @@
     transform: translateY(-2px);
 }
 
-.link {
+.link:visited, .link:hover, .link:active {
     color: #fff;
-    text-decoration: none;
 }
 
-.link:visited,
-.link:hover,
-.link:active {
-    color: #fff;
-}
