--- a/frontend/src/styles/Register.module.css
+++ b/frontend/src/styles/Register.module.css
@@ -4,7 +4,7 @@
     flex-direction:column;
     align-items: center;
     justify-content: center;
-    background: #242424;
+    background-image: url("../assets/background.svg");
     color: white;
 }
 
@@ -16,6 +16,7 @@
     background: #000;
     padding: 2rem;
     border-radius: 1rem;
+    border: solid 1px #b8b8b8;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
 
