--- a/frontend/src/styles/Register.module.css
+++ b/frontend/src/styles/Register.module.css
@@ -1,10 +1,10 @@
 .container {
-    min-height: 100vh;
+    min-height: calc(100vh - 110px);
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: url("../assets/background.svg");
+    padding: 2rem;
     color: white;
 }
 
