--- a/frontend/src/styles/HeroBackground.module.css
+++ b/frontend/src/styles/HeroBackground.module.css
@@ -1,7 +1,11 @@
 .videoBackground {
     position: absolute;
-    object-fit: fill;
+    top: 50%;
+    left: 43%;
+    width: 100vh;
+    height: 100vw;
+    object-fit: cover;
     z-index: 0;
     opacity: 0.7;
-    transform: rotate(90deg);
+    transform: translate(-50%, -50%) rotate(90deg) scale(1.2);
 }
