fix: enhance styles for Login, Footer, Header, and Landing components for improved responsiveness

--- a/frontend/src/styles/HeroContent.module.css
+++ b/frontend/src/styles/HeroContent.module.css
@@ -52,12 +52,14 @@
     }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 550px) {
     .title {
-        font-size: 3rem;
+        font-size: 2rem;
     }
-
     .description {
         font-size: 1.5rem;
+    }
+    .heroContent {
+        padding-top: 7rem;
     }
 }
