--- a/frontend/src/styles/Login.module.css
+++ b/frontend/src/styles/Login.module.css
@@ -1,11 +1,12 @@
 .container {
-    min-height: calc(100vh - 110px);
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 2rem;
     color: white;
+    overflow: hidden;
 }
 
 .login {
@@ -18,6 +19,8 @@
     border-radius: 1rem;
     border: solid 1px #b8b8b8;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+    max-height: 80vh;
+    overflow-y: auto;
 }
 
 .inputGroup {
