--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,13 +4,14 @@
   /* Custom Colors */
   --primary-blue: #5888ed;
   --primary-red: #ed2939;
+    --primary-white: #fff;
 
   /* Typography */
   font-family: 'Poppins', system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  /*color-scheme: light dark;*/
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
@@ -21,12 +22,11 @@
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  text-decoration: none;
 }
+
 a:hover {
-  color: #535bf2;
+  color: var(--primary-white);
 }
 
 body {
@@ -36,6 +36,10 @@ body {
   min-height: 100vh;
   width: 100%;
   overflow-x: hidden;
+  background-image: url('./assets/background.svg');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -58,13 +62,6 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -72,7 +69,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: inherit;
   }
   button {
     background-color: #f9f9f9;
