--- a/frontend/src/styles/Footer.module.css
+++ b/frontend/src/styles/Footer.module.css
@@ -1,14 +1,9 @@
 /* Footer Styles */
 .footer {
-    background-color: black;
+    background-color: transparent;
     font-weight: bold;
-    padding: 0 10rem 5rem 10rem;
+    padding: 3rem 6vw 5rem 6vw;
     color: #fff;
-    /*position: relative;*/
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
     width: 100%;
     z-index: 5;
     box-sizing: border-box;
@@ -30,6 +25,20 @@
 }
 
 .links {
+    font-size: 1.2rem;
+    font-weight: 500;
     text-decoration: none;
     color: white;
+}
+
+@media (max-width: 600px) {
+    .footer {
+        padding: 0 6vw 2rem 2rem;
+    }
+}
+
+@media (max-width: 400px) {
+    .links, .socialLinks {
+        font-size: 0.9rem;
+    }
 }
