--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&family=Poppins:wght@300;400;500;600;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
 
 :root {
   /* Custom Colors */
@@ -65,7 +66,7 @@ button {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #1e1e1e;
     background-color: #ffffff;
   }
   a:hover {
