--- a/frontend/src/styles/SongCard.module.css
+++ b/frontend/src/styles/SongCard.module.css
@@ -1,7 +1,8 @@
 .card {
     width: 350px;              /* Tamaño consistente de TODAS las cards */
     background: #f3f3f3;
-    border-radius: 12px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
     overflow: hidden;
     display: flex;
     flex-direction: column;
